--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,7 @@
 lessinfo
 ========
 
-A password manager that stores account into in one encrypted file.  The dependencies are python and libgcrypt.
+A password manager that stores account info in one encrypted file.  The dependencies are python and libgcrypt.
 
 Usage
 =====
@@ -40,7 +40,7 @@ A blank value removes that data from the account.  Use PASSWORD (all capitals) t
 License
 -------
 
-Copyright (C) 2015-2016 Josiah Gordon <josiahg@gmail.com>
+Copyright (C) 2015-2017 Josiah Gordon <josiahg@gmail.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
