--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,8 @@
-lessinfo
+passmgr
 ========
 
-A password manager that stores account info in one encrypted file.  The dependencies are python and libgcrypt.
+A password manager that stores account info in one encrypted file.  The
+dependencies are python and libgcrypt.
 
 Usage
 =====
@@ -10,7 +11,8 @@ Usage
 
 `$ python passmgr.py add account_name to account_file set data=value data1={secret}`
 
-Use {secret} as the value to be asked for a password or any other secret you don't want stored in your commandline history or printed to your screen.
+Use {secret} as the value to be asked for a password or any other secret you
+don't want stored in your commandline history or printed to your screen.
 
 #### View 'account_name' in 'account_file'
 
@@ -26,7 +28,8 @@ Use ALL (all capitals) as the account name to list the entire account file.
 
 `$ python passmgr.py modify account_name in account_file set data=new_value data1=`
 
-A blank value removes that data from the account.  Use PASSWORD (all capitals) to change the account file master password.
+A blank value removes that data from the account.  Use PASSWORD (all capitals)
+to change the account file master password.
 
 #### Rename 'account_name' in 'account_file' to 'new_account'
 
@@ -35,7 +38,6 @@ A blank value removes that data from the account.  Use PASSWORD (all capitals) t
 #### Remove 'new_account' from 'account_file'
 
 `$ python passmgr.py remove new_account from account_file`
-
 
 License
 -------
